--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/output.css">
-    <link rel="stylesheet" href="../style/estilo.css">
+    <link rel="stylesheet" href="./style/output.css">
+    <link rel="stylesheet" href="./style/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Galería de juegos con js</title>
 </head>
@@ -14,38 +14,38 @@
     </nav>
     <div class="grid grid-cols-2 gap-4 py-5 lg:grid-cols-4">
             <div class="card w-96 bg-base-100 shadow-2xl shadow-white">
-                <figure><img src="../images/serpiente.jpg"></figure>
+                <figure><img src="./images/serpiente.jpg"></figure>
                 <div class="card-body">
                     <h2 class="card-title brillo">Snake game</h2>
                     <div class="card-actions justify-center">
-                        <a href="../games/serpiente/index.html" class="btn btn-primary">Jugar</a>
+                        <a href="./serpiente/index.html" class="btn btn-primary">Jugar</a>
                     </div>
                 </div>
             </div>
             <div class="card w-96 bg-base-100 shadow-2xl shadow-white">
-                <figure><img src="../images/memoria.jpg"></figure>
+                <figure><img src="./images/memoria.jpg"></figure>
                 <div class="card-body">
                     <h2 class="card-title brillo">Memoria</h2>
                     <div class="card-actions justify-center">
-                        <a href="../games/memoria/index.html" class="btn btn-primary">Jugar</a>
+                        <a href="./memoria/index.html" class="btn btn-primary">Jugar</a>
                     </div>
                 </div>
             </div>
             <div class="card w-96 bg-base-100 shadow-2xl shadow-white">
-                <figure><img src="../images/tik tac toe.jpg"></figure>
+                <figure><img src="./images/tik tac toe.jpg"></figure>
                 <div class="card-body">
                     <h2 class="card-title brillo">Tic Tac Toe</h2>
                     <div class="card-actions justify-center">
-                        <a href="../games/tik tac/index.html" class="btn btn-primary">Jugar</a>
+                        <a href="./tik tac/index.html" class="btn btn-primary">Jugar</a>
                     </div>
                 </div>
             </div>
             <div class="card w-96 bg-base-100 shadow-2xl shadow-white">
-                <figure><img src="../images/laberinto.png"></figure>
+                <figure><img src="./images/laberinto.png"></figure>
                 <div class="card-body">
                     <h2 class="card-title brillo">Laberinto</h2>
                     <div class="card-actions justify-center">
-                        <a href="../games/laberinto/index.html" class="btn btn-primary">Jugar</a>
+                        <a href="./laberinto/index.html" class="btn btn-primary">Jugar</a>
                     </div>
                 </div>
             </div>
